css changes to homeComponent.

--- a/OSDMDashboard/src/app/home/home.component.html
+++ b/OSDMDashboard/src/app/home/home.component.html
@@ -14,10 +14,10 @@
         </div>  
         <div class='col-lg-5' style="border: 1px solid #72a4d0;">
             <div class="svg-title">E&O inv as a % of total inventory in each plant</div>
-            <div #chart id="chart"></div>
+            <div style="height:300px" #chart id="chart"></div>
         </div>
     </div>
-    <div class="row" style="width: 90%;margin:0 auto;">
+    <div class="row" style="width: 90%;margin:0 auto 5%;">
         <div class='col-lg-5' style="border: 1px solid #72a4d0;margin-left: 10%;">
         <br>
             <div class="svg-title">E&O Inventory distribution in all plants</div>
@@ -30,7 +30,7 @@
         <br>
         <br>
             <div class="svg-title">Actual inventory vs 30-day demand</div>
-            <div #doublechart id="doublechart"></div>
+            <div #doublechart id="doublechart" style="height:300px;"></div>
         </div>
     </div>
 </div>
