--- a/OSDMDashboard/src/app/home/home.component.html
+++ b/OSDMDashboard/src/app/home/home.component.html
@@ -25,6 +25,10 @@
                 <g id="pie1" transform="translate(120, 140)"></g>
                 <g id="pie2" transform="translate(400, 140)"></g>
             </svg>
+            <div class="pieChart-title">
+                <div class="title-1">E&O Value($)</div>
+                <div class="title-2">E&O Units</div>
+            </div>
         </div>
         <div class='col-lg-5' style="border: 1px solid #72a4d0;">
         <br>
