--- a/OSDMDashboard/src/app/home/home.component.html
+++ b/OSDMDashboard/src/app/home/home.component.html
@@ -18,15 +18,16 @@
         </div>
     </div>
     <div class="row" style="width: 90%;margin:0 auto 5%;">
-        <div class='col-lg-5' style="border: 1px solid #72a4d0;margin-left: 10%;">
+        <div class='col-lg-5' style="margin-left: 8%;">
         <br>
             <div class="svg-title">E&O Inventory distribution in all plants</div>
-            <svg width="700" height="280">
+            <svg width="600" height="350">
                 <g id="pie1" transform="translate(120, 140)"></g>
+                
                 <g id="pie2" transform="translate(400, 140)"></g>
             </svg>
         </div>
-        <div class='col-lg-5' style="border: 1px solid #72a4d0;">
+        <div class='col-lg-5' style="border: 1px solid #72a4d0;margin-left: 2%;">
         <br>
         <br>
             <div class="svg-title">Actual inventory vs 30-day demand</div>
