--- a/OSDMDashboard/src/app/home/home.component.html
+++ b/OSDMDashboard/src/app/home/home.component.html
@@ -7,18 +7,18 @@
     <a [routerLink]="['heatmapNav']" class="heatmapLink">Navigate to detailed view ></a>
     <br>
     <br>
-    <div class="row" style="width: 90%;margin:0 auto;">
-        <div class='col-lg-5' style="border: 1px solid #72a4d0;margin-left: 10%;">
+    <div class="row" >
+        <div class='col-lg-5'>
             <div class="svg-title">Top 10 materials with the highest demand across all plants</div>
             <div #svg1 id="svg1"></div>
         </div>  
-        <div class='col-lg-5' style="border: 1px solid #72a4d0;">
+        <div class='col-lg-6 offset-lg-1 topRight'>
             <div class="svg-title">E&O inv as a % of total inventory in each plant</div>
             <div style="height:300px" #chart id="chart"></div>
         </div>
     </div>
-    <div class="row" style="width: 90%;margin:0 auto 5%;">
-        <div class='col-lg-5' style="margin-left: 8%;">
+    <div class="row row2">
+        <div class='col-lg-5'>
         <br>
             <div class="svg-title">E&O Inventory distribution in all plants</div>
             <svg width="600" height="350">
@@ -31,7 +31,7 @@
                 <div class="title-2">E&O Units</div>
             </div>
         </div>
-        <div class='col-lg-5' style="border: 1px solid #72a4d0;margin-left: 2%;">
+        <div class='col-lg-6 offset-lg-1 bottomRight' >
         <br>
         <br>
             <div class="svg-title">Actual inventory vs 30-day demand</div>
