--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
@@ -50,7 +50,7 @@
                     <mat-form-field class="example-full-width">
                         <mat-placeholder class="myclass">Material No</mat-placeholder>
                         <!-- (keyup)="onKey($event.target.value)" -->
-                        <input  type="text" class="form-control" matInput formControlName="materialNo" [matAutocomplete]="auto">
+                        <input  type="text" class="form-control" matInput formControlName="materialNo" (keyup)="onKey($event.target.value)" [matAutocomplete]="auto">
                         <mat-autocomplete #auto="matAutocomplete">
                             <mat-option *ngFor="let option1 of materialNumbers" [value]="option1">
                             {{option1}}
