--- a/OSDMDashboard/src/app/home/home.component.css
+++ b/OSDMDashboard/src/app/home/home.component.css
@@ -85,3 +85,18 @@ text {
 .row2{
   margin-bottom: 1%
 }
+.tooltip{
+  position      : absolute;
+  text-align    : center;
+  max-width     : 70px;
+  max-height    : 30px;
+  padding       : 8px;
+  border        : none;
+  border-radius : 8px;
+  margin-top    : -30px;
+  font          : 10px sans-serif;
+  background    : black;
+  color         : white;
+  pointer-events: none;
+  display: none;
+}
