--- a/OSDMDashboard/src/app/home/home.component.html
+++ b/OSDMDashboard/src/app/home/home.component.html
@@ -36,7 +36,9 @@
         <br>
         <br>
             <div class="svg-title1">Actual inventory vs 30-day demand</div>
-            <div #doublechart id="doublechart" style="height:300px;"></div>
+            <div #doublechart id="doublechart" style="height:300px;">
+                <div class="tooltip"></div>
+            </div>
         </div>
     </div>
 </div>
